--- a/src/Theme/styles/main.css
+++ b/src/Theme/styles/main.css
@@ -95,16 +95,25 @@ img {
   width: 90px;
 }
 
+.TitlePage__Loading {
+  font-weight: normal;
+  font-size: 25px;
+  text-align: center;
+  text-align: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 40px;
+  width: 90px;
+}
+
 .TitlePage__StartGame:hover {
   color: #000;
   cursor: pointer;
 }
 
 .GamePage {
-  height: 100%;
-  width: 900px;
   margin: auto;
-  padding: 20px;
   display: flex;
   flex-direction: column;
   color: #555;
@@ -114,9 +123,25 @@ img {
   background-color: white;
 }
 
+.GamePage__background {
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  background-size: cover;
+  opacity: 0.4;
+}
+
 .Layout {
+  position: relative;
+  min-height: 100vh;
   display: flex;
   flex: 1;
+  width: 900px;
+  margin: auto;
+  background-color: rgba(255,255,255,0.93);
+  width: 900px;
+  margin: auto;
+  padding: 20px;
 }
 
 .Current-location {
