--- a/src/Theme/styles/main.css
+++ b/src/Theme/styles/main.css
@@ -1,3 +1,5 @@
+/* These styles apply to the theme. */
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -45,6 +47,19 @@ body {
 img {
   max-width: 100%;
   margin: 5px;
+}
+
+.Loading {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #555;
+  font-family: helvetica;
+  font-size: 48px;
+  font-weight: normal;
+  background-color: white;
 }
 
 .GamePage {
